well rounded and ready to be worked on.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "watchy -w src -- npm run build",
     "watch-html": "watchy -w src/index.html -- npm run inline",
     "watch-js": "watchy -w 'src/**/*.js' -- npm run js-dev",
-    "watch-css": "watchy -w 'src/**/*.css' -- npm run css && cp .tmp/styles.css dist/css/styles.css",
+    "watch-css": "watchy -w 'src/**/*.css' -- npm run css && cp .tmp/styles.css dist/css/styles.css && npm run inline",
     "build": "npm run clean && npm run js-dev && npm run css && cp .tmp/styles.css dist/css/styles.css && npm run inline",
     "js-dev": "browserify -d -v -t babelify src/js/app.js -o dist/js/app.js",
     "js-dist": "browserify -v -t babelify -t uglifyify src/js/app.js -o .tmp/app.build.js && npm run js-min dist",
@@ -40,6 +40,7 @@
     "cssnano": "^3.7.0",
     "cssnano-cli": "^1.0.4",
     "html-minifier": "^2.1.4",
+    "immutable-devtools": "0.0.7",
     "postcss": "^5.0.21",
     "postcss-cli": "^2.5.2",
     "postcss-import": "^8.1.2",
@@ -50,10 +51,11 @@
     "watchy": "^0.6.6"
   },
   "dependencies": {
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.1",
     "cookie-parser": "^1.4.3",
     "director": "^1.2.8",
-    "event": "github:dhenson02/event",
+    "event": "github:wilsonpage/event",
     "express": "^4.14.0",
     "fastclick": "^1.0.6",
     "fastdom": "^1.0.2",
